# humanize

./: CMakeLists.txt
include/: humanize.h
tests/: humanize_test.cpp
